exports[`test Should render no image when none provided 1`] = `
<div>
  <label
    className="form__label">
    test field label
  </label>
  <div
    className="image-select form__group">
    <button
      className="image-select__button"
      onClick={[Function]}>
      + Add Image from Grid
    </button>
  </div>
  <div />
</div>
`;

exports[`test Should render with image when provided 1`] = `
<div>
  <label
    className="form__label">
    test field label
  </label>
  <div
    className="image-select form__group">
    <div
      className="image-select__image-display">
      <div
        className="image-select__image">
        <img
          src="https://s3-eu-west-1.amazonaws.com/media-origin.test.dev-guim.co.uk/5dfc898f6866c8bb4224b65b9aae89e6eb7af30f/783_0_2025_1215/1000.jpg" />
      </div>
      <div
        className="image-select__image-details">
        <div
          className="image-select__image-details__detail">
          <a
            href="https://media.test.dev-gutools.co.uk/images/5dfc898f6866c8bb4224b65b9aae89e6eb7af30f"
            target="_blank">
            View image in the Grid
          </a>
        </div>
        <div
          className="image-select__image-details__detail">
          Size: 
          957.37 KB
        </div>
        <div
          className="image-select__image-details__detail">
          Dimensions: 
          2025
           x 
          1215
        </div>
        <button
          className="image-select__button"
          onClick={[Function]}>
          Replace Image
        </button>
      </div>
    </div>
  </div>
  <div />
</div>
`;
